--------------------------
Darshan Release Change Log
--------------------------

darshan-2.3.1-pre1
=============
* Change OPEN_TIMESTAMP field to report timestamp right before open() is
  invoked rather than after timestamp after open is completed
* Change start_time and end_time fields in job record to use min and max
  (respectively) across all ranks
* Fix bug in write volume data reported in file system table in
  darshan-job-summary.pl (reported by Matthieu Dorier)

TODO: bump log version number and add warnings about semantic changes  

darshan-2.3.0
=============
* Fix incorrect version numbering in darshan-runtime component of Darshan
  2.2.9, reported by Jean-Guillaume Piccinali

darshan-2.2.9
=============
* Bug fixes:
  - Fix mnt table overflow if a large number of file systems are mounted, 
    reported by David Shrader.
  - Fix argument parsing for darshan-convert, reported by Mouhamed Gueye.
  - Fix metadata annotation overflow in darshan-convert, reported by 
    Mouhamed Gueye.
  - Fix const-correctness in dynamic library when built against MPI 3.x
    libraries.
  - Fix "undefined symbol: dlsym" error when using preloaded dynamic library
    on some platforms, reported by Florin Isaila.
  - Normalize timestamps to always be relative to MPI_Init().
  - Better library name matching in compiler wrappers to handle more MPICH
    variations on Blue Gene systems.
  - Fixed header dependency problems when using darshan-logutils.h in external
    programs (Shane Snyder).
* Enhancements:
  - Add support (both in documentation and in provided module files) for
    Cray PE 2.x.
  - Honor CC variable to allow darshan-util to be built with other compilers
    besides gcc.
  - Update documentation to clarify the interaction between rpath and
    LD_PRELOAD when instrumenting dynamic libraries, issue reported and
    investigated by Davide Del Vento.
  - Ability to disable shared-file reduction by setting the